examples/test/testpolicy12960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12960
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key19: value38
      key1: value9
      key43: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value13
      podSelector:
        matchLabels:
          key25: value48
